--- a/src/main/resources/templates/authentication.html
+++ b/src/main/resources/templates/authentication.html
@@ -3,20 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Аутентификация</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
 </head>
 <body>
-<h3>Вход</h3>
-<form method="post" action="/process_login">
+
+<div class="container reg_form" style="min-height: 820px;">
+  <form class="row justify-content-center" method="post" action="/process_login">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
-  <label for="username">Введите логин:</label>
-  <input type="text" placeholder="Введите логин" name="username" id="username" >
-    <br>
-    <label for="password">Введите пароль:</label>
-    <input type="password" placeholder=" Введите пароль"  name="password" id="password">
-    <input type="submit" value="Войти">
-</form>
-<div th:if="${param.error}" style="color: red" > Неправельный логин или пароль</div>
-<a href = "/registration"> Зарегистрироваться</a>
+      <h2 class="col-12" style="text-align: center">Аутентификация</h2>      
+      <div class="w-100"></div>
+      <div class="mb-3 col-12 col-md-4">
+          <label for="username" class="form-label">Логин</label>
+          <input name="username"  type="text" id="username" class="form-control" required placeholder="введите ваш логин...">
+      </div>
+      <div class="w-100"></div>
+      <div class="mb-3 col-12 col-md-4">
+          <label for="password" class="form-label">Пароль</label>
+          <input name="password" type="password" id="password" class="form-control"  required placeholder="введите ваш пароль...">
+      </div>
+      <div class="w-100"></div>
+      <div class="mb-3 col-12 col-md-4">
+          <button type="submit" name="button-log" class="btn btn-secondary">Войти</button>
+          
+      </div>
+  </form>
+  <div th:if="${param.error}" style="color: red; text-align: center"> Неправельный логин или пароль</div>
+
+</div>
+
+
+
 </body>
 </html>
