--- a/src/main/resources/templates/orderId.html
+++ b/src/main/resources/templates/orderId.html
@@ -2,29 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/84b2eb656e.js" crossorigin="anonymous"></script>
     <title>Подробно о заказе</title>
 </head>
 <body>
-<form method="post" action="/logout">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
-    <button type="submit" >Выйти из личного кабинета</button>
-</form>
-<a href="/admin/ordersAdmin">Назад к заказам</a>
-<br>
-<h3>Информация о заказе: </h3>
-<form th:method="post" th:action="@{/admin/order/{id}(id=${order.getId()})}" th:object="${order}">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background:#eaf5ee; ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="http://localhost:8080/admin">E-Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/ordersAdmin">заказы</a>
+                    </li>
+                </ul>
+    
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                    <li class="nav-item">
+                      <form method="post" action="/logout">
+                          <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
+                          <button type="submit" class="btn btn-outline-info btn-sm">Выход</button>
+                      </form>
+                    </li>             
+                  </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+            <h3 style="text-align: center;">Информация о заказе: </h3>
+    <div class="row">
+        <form th:method="post" th:action="@{/admin/order/{id}(id=${order.getId()})}" th:object="${order}">
     <p th:text="'Номер заказа: ' + ${order.getNumber()}"></p>
     <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>
     <p th:text="'Состав заказа: ' + ${order.getProduct().getTitle()}"></p>
     <p th:text="'Стоимость: ' + ${order.getPrice()}"></p>
     <p th:text="'Статус заказа: ' + ${order.getStatus()}"></p>
-    <label for="status">Изменить статус на: </label>
-    <select name="status" th:field="*{status}" id="status">
+    <label for="status" class="form-label">Изменить статус на: </label>
+    <select name="status" class="form-select" th:field="*{status}" id="status" style="width: 250px;">
         <div th:each="orderStatus: ${status}">
             <option th:text="${orderStatus}" th:value="${orderStatus}"></option>
         </div>
     </select>
-    <input type="submit" value="Изменить ">
-</form>
+    <br>
+    <input type="submit" class="btn btn-success" value="Изменить ">
+   </form>
+
+    </div>
+    </div>
+
+  
 </body>
 </html>
