--- a/src/main/resources/templates/product/editProduct.html
+++ b/src/main/resources/templates/product/editProduct.html
@@ -2,46 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/84b2eb656e.js" crossorigin="anonymous"></script>
   <title>Редактирование товара</title>
 </head>
 <body>
-<h3>Редактирование товара</h3>
-<form th:method="POST" th:action="@{/admin/product/edit/{id}(id=${product.getId()})}" th:object="${product}" enctype="multipart/form-data">
-  <label for="title">Введите наименование товара: </label>
-  <input type="text" th:field="*{title}" placeholder="Наименование" id="title">
-  <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
-  <br>
-  <br>
-  <label for="description">Введите описание товара: </label>
-  <textarea th:field="*{description}" placeholder="Описание" id="description"></textarea>
-  <div style="color: red" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
-  <br>
-  <br>
-  <label for="price">Введите цену товара: </label>
-  <input type="number" th:field="*{price}" min="1" step="0.00" placeholder="Цена" id="price">
-  <div style="color: red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
-  <br>
-  <br>
-  <label for="warehouse">Введите cклад, на котором расположен товар: </label>
-  <input type="text" th:field="*{warehouse}" placeholder="Cклад" id="warehouse">
-  <div style="color: red" th:if="${#fields.hasErrors('warehouse')}" th:errors="*{warehouse}"></div>
-  <br>
-  <br>
-  <label for="category">Выберите категорию товара: </label>
-  <select name="category" th:field="*{category}" id="category">
-    <div th:each="element : ${category}">
-      <option th:text="${element.getName()}" th:value="${element.getId()}">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background:#eaf5ee; ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="http://localhost:8080/admin">E-Shop</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
+             
+            </ul>
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                  <form method="post" action="/logout">
+                      <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
+                      <button type="submit" class="btn btn-outline-info btn-sm">Выход</button>
+                  </form>
+                </li>             
+              </ul>
+        </div>
     </div>
-  </select>
-  <div style="color: red" th:if="${#fields.hasErrors('category')}" th:errors="*{category}"></div>
-  <br>
-  <br>
-  <label for="seller">Введите данные о продавце: </label>
-  <textarea th:field="*{seller}" placeholder="Продавец" id="seller"></textarea>
-  <div style="color: red" th:if="${#fields.hasErrors('seller')}" th:errors="*{seller}"></div>
-  <br>
-  <br>
-  <input type="submit" value="Редактировать">
+</nav>
+<div class="container" style="width: 550px;">
+<h3 style="text-align: center;">Редактирование товара</h3>
+<form th:method="POST" th:action="@{/admin/product/edit/{id}(id=${product.getId()})}" th:object="${product}" enctype="multipart/form-data">
+  <div class="mb-3">
+    <label for="title" class="form-label">Введите наименование товара: </label>
+    <input type="text" class="form-control" th:field="*{title}" placeholder="Наименование" id="title">
+    <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
+   </div>
+   <div class="mb-3">
+    <label for="description" class="form-label">Введите описание товара: </label>
+    <textarea th:field="*{description}" class="form-control" rows="6" placeholder="Описание" id="description"></textarea>
+    <div style="color: red" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
+    </div>
+    
+    <div class="mb-3">
+    <label for="price" class="form-label">Введите цену товара: </label>
+    <input type="number" class="form-control" th:field="*{price}" min="1" step="0.00" placeholder="Цена" id="price">
+    <div style="color: red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
+    </div>
+
+    <div class="mb-3">
+    <label for="warehouse" class="form-label">Введите cклад, на котором расположен товар: </label>
+    <input type="text" class="form-control" th:field="*{warehouse}" placeholder="Cклад" id="warehouse">
+    <div style="color: red" th:if="${#fields.hasErrors('warehouse')}" th:errors="*{warehouse}"></div>
+    </div>
+
+    <div class="mb-3">
+    <label for="category" class="form-label">Выберите категорию товара: </label>
+    <select name="category" class="form-select" th:field="*{category}" id="category">
+        <div th:each="element : ${category}">
+            <option th:text="${element.getName()}" th:value="${element.getId()}">
+        </div>
+    </select>
+    <div style="color: red" th:if="${#fields.hasErrors('category')}" th:errors="*{category}"></div>
+    </div>
+
+    <div class="mb-3">
+    <label for="seller" class="form-label">Введите данные о продавце: </label>
+    <textarea th:field="*{seller}" class="form-control" rows="3" placeholder="Продавец" id="seller"></textarea>
+    <div style="color: red" th:if="${#fields.hasErrors('seller')}" th:errors="*{seller}"></div>
+    </div>
+  <input type="submit" class="btn btn-success" value="Редактировать">
 </form>
+</div>
 </body>
 </html>
