--- a/src/main/resources/templates/product/infoProduct.html
+++ b/src/main/resources/templates/product/infoProduct.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <title>Информация о товаре</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background:#d9d9ce; ;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">E-Shop</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+    </div>
+  </nav>
+  <div class="container ">
 <h3>Информация о товаре: </h3>
 <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
 <p th:text="'Описание: ' + ${product.getDescription()}"></p>
@@ -12,8 +27,42 @@
 <p th:text="'Cклад: ' + ${product.getWarehouse()}"></p>
 <p th:text="'Продавец: ' + ${product.getSeller()}"></p>
 <p th:text="'Категория: ' + ${product.getCategory().getName()}"></p>
-<div th:each="img : ${product.getImageList()}">
-  <img th:src="'/img/' + ${img.getFileName()}">
 </div>
+
+
+<div class="container info-carousel">
+  <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">   
+    <div class="carousel-inner" >
+
+      <div class="carousel-item active">
+        <img th:src="'/img/' + ${product.imageList[0].getFileName()}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img th:src="'/img/' + ${product.imageList[1].getFileName()}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img th:src="'/img/' + ${product.imageList[2].getFileName()}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img th:src="'/img/' + ${product.imageList[3].getFileName()}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img th:src="'/img/' + ${product.imageList[4].getFileName()}" class="d-block w-100" alt="...">
+      </div>     
+      
+      
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+<br>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
