--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -2,59 +2,163 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cписок товаров</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+  <title>Главная</title>
 </head>
 <body>
-<h3>Главная страница магазина</h3>
-<h3>Cортировка, поиск, фильтрация</h3>
-<form th:method="POST" th:action="@{/product/search}">
-  <fieldset>
-    <legend>Выберите параметры для сортировки, поиска, фильтрации:</legend>
-    <label for="search">Поиск по наименованию</label>
-    <input type="text" id="search" name="search" th:value="*{value_search}">
-    <br>
-    <p>Цена, P</p>
-    <label for="ot">От</label>
-    <input type="text" name="ot" id="ot" th:value="*{value_price_ot}">
-    <label for="do">До</label>
-    <input type="text" name="do" id="do" th:value="*{value_price_do}">
-    <br>
-    <br>
-    <div>
-      <input type="radio" id="ascending_price" name="price" value="sorted_by_ascending_price">
-      <label for="ascending_price">Отсортировать по возрастанию цены</label>
-      <input type="radio" id="descending_price" name="price" value="sorted_by_descending_price">
-      <label for="descending_price">Отсортировать по убыванию цены</label>
-      <p>Категория товаров: </p>
-      <input type="radio" id="furniture" name="contract" value="furniture">
-      <label for="furniture">Мебель</label>
-      <input type="radio" id="appliances" name="contract" value="appliances">
-      <label for="appliances">Бытовая техника</label>
-      <input type="radio" id="clothes" name="contract" value="clothes">
-      <label for="clothes">Одежда</label>
-      <br>
-      <br>
-      <input type="submit" value="Найти">
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">E-Shop</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 top-menu">
+        <li class="nav-item">
+          <a class="nav-link" href="/registration">Регистрация</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/authentication">Авторизация</a>
+        </li>
+      </ul>
     </div>
-  </fieldset>
-</form>
-<hr>
-<h3>Результат поиска, cортировки, фильтрации</h3>
-<div th:each="product : ${search_product}">
-  <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
-  <br>
-  <a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a>
-  <p th:text="'Цена: ' + ${product.getPrice()}"></p>
-  <hr>
+  </div>
+</nav>
+
+<div class="container-fluid my-carousel">
+  <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img th:src="@{/images/1.jpg}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img th:src="@{/images/2.jpg}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img th:src="@{/images/3.jpg}" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 </div>
-<hr>
-<h3>Доступные товары: </h3>
-<div th:each="product : ${products}">
-  <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
-  <br>
-  <a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a>
-  <p th:text="'Цена: ' + ${product.getPrice()}"></p>
-  <hr>
-</div>
+
+<section class="main-content">
+  <div class="container ">
+    <div class="poisk">
+    <form th:method="POST" th:action="@{/product/search}" >
+    
+       <h3> Выберите параметры для сортировки, поиска, фильтрации:</h3> 
+       <div class="mb-3 row">
+        <label for="search" class="col-sm-2 col-form-label">Поиск по наименованию</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control form-control-sm" id="search" name="search" th:value="*{value_search}">
+        </div>
+      </div>
+          
+      <div class="mb-3 row">
+        <label for="ot" class="col-sm-1 col-form-label">Цена, P</label>
+        <div class="col-sm-2">
+          <input type="text" class="form-control form-control-sm" name="ot" id="ot" th:value="*{value_price_ot}" placeholder="От">
+        </div>
+
+        
+        <div class="col-sm-2">
+          <input type="text" class="form-control form-control-sm"  name="do" id="do" th:value="*{value_price_do}" placeholder="До">
+        </div>
+      </div>
+
+        <div>
+          <input type="radio" id="ascending_price" name="price" value="sorted_by_ascending_price">
+          <label for="ascending_price">Отсортировать по возрастанию цены</label>
+          <br>
+          <input type="radio" id="descending_price" name="price" value="sorted_by_descending_price">
+          <label for="descending_price">Отсортировать по убыванию цены</label>
+          <br>
+          <br>
+
+
+
+          <p>Категория товаров: </p>
+          <input type="radio" id="furniture" name="contract" value="furniture">
+          <label for="furniture">Телефоны</label>
+          <input type="radio" id="appliances" name="contract" value="appliances">
+          <label for="appliances">Бытовая техника</label>
+          <input type="radio" id="clothes" name="contract" value="clothes">
+          <label for="clothes">Телевизоры</label>
+          <br>
+          <br>          
+          <button type="submit" class="btn btn-success">Найти</button>
+        </div>
+      
+    </form>
+    
+    <h3 style=" text-align: center;">Результат поиска, cортировки, фильтрации</h3>
+    <div class="row ">   
+    <div th:each="product : ${search_product}" class="col-lg-4 col-sm-6 mb-3">
+    
+
+      <div class="product-card">
+          <div class="product-thumb">
+            <a th:href="@{/product/info/{id}(id=${product.getId()})}" ><img th:src="'/img/' + ${product.imageList[0].getFileName()}" ></a>
+          </div>
+          <div class="product-details">
+            <h4><a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a></h4>           
+            <div class="product-bottom-details d-flex justify-content-between">
+              <div class="product-price">
+                 <span th:text="${product.getPrice()}"></span> 
+              </div>
+              <div class="product-links">
+                
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+    </div>
+  </div>
+
+
+    <h3 style=" text-align: center;">Доступные товары: </h3>   
+    <div class="row">       
+      <div th:each="product : ${products}" class="col-lg-4 col-sm-6 mb-3">
+        <div class="product-card">
+          <div class="product-thumb">
+            <a th:href="@{/product/info/{id}(id=${product.getId()})}" ><img th:src="'/img/' + ${product.imageList[0].getFileName()}" ></a>
+          </div>
+          <div class="product-details">
+            <h4><a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a></h4>           
+            <div class="product-bottom-details d-flex justify-content-between">
+              <div class="product-price">
+                 <span th:text="${product.getPrice()}"></span> 
+              </div>
+              <div class="product-links">
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>				
+    
+
+   </div>
+  </div>
+</section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
