--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,21 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
     <title>Регистрация</title>
 </head>
 <body>
-<h3>Регистрация</h3>
-<form method="post" th:action="@{/registration}" th:object="${person}">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
-    <label for="login">Введите логин:</label>
-    <input type="text" th:field="*{login}" id="login" >
-    <div style="color: red" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"> </div>
-    <br>
-    <label for="password">Введите пароль:</label>
-    <input type="password"  th:field="*{password}" id="password">
-    <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"> </div>
-    <input type="submit" value="Зарегистрироваться">
-</form>
-<a href = "/authentication"> Вход</a>
+    <div class="container reg_form" style="min-height: 820px;">
+        <form class="row justify-content-center" method="post" th:action="@{/registration}" th:object="${person}">
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
+            <h2 class="col-12" style="text-align: center">Регистрация</h2>      
+            <div class="w-100"></div>
+            <div class="mb-3 col-12 col-md-4">
+                <label for="login" class="form-label">Логин</label>
+                <input   type="text" th:field="*{login}" id="login" class="form-control"  placeholder="логин">
+                <div style="color: red" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"> </div>
+            </div>
+            <div class="w-100"></div>
+            <div class="mb-3 col-12 col-md-4">
+                <label for="password" class="form-label">Пароль</label>
+                <input type="password"  th:field="*{password}" id="password" class="form-control"  placeholder=" пароль">
+                <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"> </div>
+            </div>
+            <div class="w-100"></div>
+            <div class="mb-3 col-12 col-md-4">
+                <button type="submit" name="button-log" class="btn btn-secondary">Зарегистрироваться</button>                
+            </div>
+        </form>
+      </div>
+
+
 </body>
 </html>
