--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -2,19 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/84b2eb656e.js" crossorigin="anonymous"></script>
   <title>Корзина</title>
 </head>
 <body>
-<h3>Корзина товаров</h3>
-<div th:each="product : ${cart_product}">
-  <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
-  <br>
-  <a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a>
-  <p th:text="'Цена: ' + ${product.getPrice()}"></p>
-  <a th:href="@{/cart/delete/{id}(id=${product.getId()})}">Удалить</a>
-  <hr>
-</div>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background:#dbd8b9; ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="http://localhost:8080/person_account">E-Shop</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
+            <li class="nav-item">
+                <form method="get" th:action="@{/orders}">
+                    <input type="submit" value="Заказы" class="btn btn-outline-warning btn-sm">
+                </form>
+            </li>
+            <li class="nav-item" style="margin-left: 10px;">
+                <form method="get" th:action="@{/cart}">
+                    <button type="submit" class="btn btn-outline-success btn-sm">Корзина</button>
+                </form>
+            </li>               
+        </ul>
+
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+          <li class="nav-item">
+            <form method="post" action="/logout">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
+                <button type="submit" class="btn btn-outline-info btn-sm">Выход</button>
+            </form>
+          </li>             
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container ">
+<h3 style="text-align: center;">Корзина товаров</h3>
+<div class="row ">   
+  <div th:each="product : ${cart_product}" class="col-lg-4 col-sm-6 mb-3">
+    <div class="product-card">
+        <div class="product-thumb">
+          <a th:href="@{/product/info/{id}(id=${product.getId()})}" ><img th:src="'/img/' + ${product.imageList[0].getFileName()}" ></a>
+        </div>
+        <div class="product-details">
+          <h4><a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a></h4>           
+          <div class="product-bottom-details d-flex justify-content-between">
+            <div class="product-price">
+               <span th:text="${product.getPrice()}"></span> 
+            </div>
+            <div class="product-links">
+              <a th:href="@{/cart/delete/{id}(id=${product.getId()})}"><i class="fa-regular fa-trash-can"></i></a> 
+            </div>
+          </div>  
+        </div>
+      </div>
+      </div>
+  </div>
+
 <h3 th:text="'Итоговая цена: ' + ${price}"></h3>
-<a href="/order/create">Оформить заказ</a>
+<a href="/order/create" class="btn btn-success active" >Оформить заказ</a>
+</div>
 </body>
 </html>
