--- a/src/main/resources/templates/user/orders.html
+++ b/src/main/resources/templates/user/orders.html
@@ -2,18 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Заказы</title>
 </head>
 <body>
-<h3>Заказы</h3>
-<div th:each="order : ${orders}">
-  <h3 th:text="'Заказ №' + ${order.getNumber()}"></h3>
-  <img th:src="'/img/' + ${order.getProduct().getImageList()[0].getFileName()}" width="300px">
-  <p th:text="'Наименование: ' + ${order.getProduct().getTitle()}">
-  <p th:text="'Количество: ' + ${order.getCount()}">
-  <p th:text="'Цена: ' + ${order.getPrice()}">
-  <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>
-  <p th:text="'Cтатус: ' + ${order.getStatus()}">
-</div>
+  <nav class="navbar navbar-expand-lg navbar-light"  style="background:#eaf5ee;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="http://localhost:8080/person_account">E-Shop</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
+            <li class="nav-item">
+                <form method="get" th:action="@{/orders}">
+                    <input type="submit" value="Заказы" class="btn btn-outline-warning btn-sm">
+                </form>
+            </li>
+            <li class="nav-item" style="margin-left: 10px;">
+                <form method="get" th:action="@{/cart}">
+                    <button type="submit" class="btn btn-outline-success btn-sm">Корзина</button>
+                </form>
+            </li>               
+        </ul>
+
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+          <li class="nav-item">
+            <form method="post" action="/logout">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
+                <button type="submit" class="btn btn-outline-info btn-sm">Выход</button>
+            </form>
+          </li>             
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<div class="container ">
+  <h3 style="text-align: center;">Заказы</h3>
+  <div class="row ">   
+    <div th:each="order : ${orders}" class="col-lg-4 col-sm-6 mb-3">
+      <div class="product-card">
+          <div class="product-thumb" >
+            <img th:src="'/img/' + ${order.getProduct().getImageList()[0].getFileName()}" >
+          </div>
+          <div class="product-details">
+            <p th:text="' № заказа ' + ${order.getNumber()}">
+            <p th:text="'Количество: ' + ${order.getCount()}"> 
+            <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>  
+            <p th:text="'Cтатус: ' + ${order.getStatus()}"> 
+            <div class="product-bottom-details d-flex justify-content-between">
+              <div class="product-price">
+                <span th:text=" ${order.getPrice()}"></span></span> 
+             </div>
+             <div class="product-links">
+               <span ></span>
+             </div>
+            </div>  
+          </div>
+        </div>
+        </div>
+    </div> 
+  </div>
+
+
 </body>
 </html>
