--- a/src/main/resources/templates/userAll.html
+++ b/src/main/resources/templates/userAll.html
@@ -2,24 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/84b2eb656e.js" crossorigin="anonymous"></script>
   <title>Пользователи</title>
 </head>
 <body>
-<form method="post" action="/logout">
-  <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
-  <button type="submit" >Выйти из личного кабинета</button>
-</form>
-<br>
-<a href="/admin">Назад в личный кабинет</a>
-<hr>
-<br>
-<h3>Список  пользователей</h3>
-<br>
-<div th:each="user : ${users}">
-  Логин пользователя: <a th:href="@{/admin/user/{id}(id=${user.getId()})}" th:text="${user.getLogin()}"></a>
-  <p th:text="'Роль пользователя: ' + ${user.getRole}"></p>
-  <hr>
-  <br>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background:#eaf5ee; ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="http://localhost:8080/admin">E-Shop</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
+                
+            </ul>
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                  <form method="post" action="/logout">
+                      <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
+                      <button type="submit" class="btn btn-outline-info btn-sm">Выход</button>
+                  </form>
+                </li>             
+              </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+  <h3 style="text-align: center;">Список  пользователей</h3>
+  <div class="row">
+    <div th:each="user : ${users}" class="col-lg-4 col-sm-6 mb-3">
+      <div class="product-card">      
+        <div class="product-details">
+          Логин пользователя: <a th:href="@{/admin/user/{id}(id=${user.getId()})}" th:text="${user.getLogin()}"></a>
+          <p th:text="'Роль пользователя: ' + ${user.getRole}"></p>        
+        </div>
+      </div>
+   </div>
+ </div>
 </div>
 </body>
 </html>
