--- a/src/main/resources/templates/userId.html
+++ b/src/main/resources/templates/userId.html
@@ -2,34 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/84b2eb656e.js" crossorigin="anonymous"></script>
   <title>Информация о пользователе</title>
 </head>
 <body>
-<form method="post" action="/logout">
-  <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
-  <button type="submit" >Выйти из личного кабинета</button>
-</form>
-<br>
-<a href="/admin">Назад в личный кабинет</a>
-<br>
-<a href="/admin/userAll">Назад к списку пользователей</a>
-<hr>
-<br>
-<h3>Информация о пользователе: </h3>
-<p th:text="'Логин: ' + ${user.getLogin()}"></p>
-<p th:text="'ID пользователя: ' + ${user.getId()}"></p>
-<p th:text="'Роль пользователя: ' + ${user.getRole}"></p>
-<div th:if="${!user.getRole().equals('ROLE_ADMIN')}">
-  <form th:method="post" th:action="@{/admin/user/{id}(id=${user.getId()})}" th:object="${user}">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background:#eaf5ee; ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="http://localhost:8080/admin">E-Shop</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/userAll">пользователи</a>
+                </li>
+            </ul>
 
-    <label for="role">Изменить роль пользователя: </label>
-    <select name="role" th:field="*{role}" id="role">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                  <form method="post" action="/logout">
+                      <input type="hidden" th:name="${_csrf.parameterName}" th:value = "${_csrf.token}" >
+                      <button type="submit" class="btn btn-outline-info btn-sm">Выход</button>
+                  </form>
+                </li>             
+              </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+  <h3 style="text-align: center;">Информация о пользователе: </h3>
+<div class="row">
+  <p th:text="'Логин: ' + ${user.getLogin()}"></p>
+  <p th:text="'ID пользователя: ' + ${user.getId()}"></p>
+  <p th:text="'Роль пользователя: ' + ${user.getRole}"></p>
+ <div th:if="${!user.getRole().equals('ROLE_ADMIN')}">
+<form th:method="post" th:action="@{/admin/user/{id}(id=${user.getId()})}" th:object="${user}">
+
+<label for="status" class="form-label">Изменить статус на: </label>
+<label for="role" class="form-label">Изменить роль пользователя: </label>
+    <select name="role" th:field="*{role}"  class="form-select" id="role" style="width: 250px;">
       <option th:text="${role[1]}" th:value="${role[1]}"></option>
       <option th:text="${role[2]}" th:value="${role[2]}"></option>
       <option th:text="${role[0]}" th:value="${role[0]}"></option>
     </select>
-    <input type="submit" value="Изменить">
-  </form>
+<br>
+<input type="submit" class="btn btn-success" value="Изменить ">
+</form>
 </div>
+
+</div>
+</div>
+
 </body>
 </html>
